<resources>
    <string name="app_name">OralArithmetic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_msg">口算测试</string>
    <string name="enter">开始</string>
    <string name="high_score">最高分%d</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonDelete">C</string>
    <string name="buttonSubmit">OK</string>

    <string name="current_score">得分: %d</string>
    <string name="input_indicator">你的答案</string>
    <string name="answer_corrent">回答正确，继续</string>
</resources>
